Add reset-css instead of normalize-scss to work with a clean workspace

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>
-  {{title}}
-</h1>
-
 <ga-header></ga-header>
+<ga-trajectory></ga-trajectory>
+<ga-balance></ga-balance>
+<ga-statistics></ga-statistics>
+<ga-management></ga-management>
+<ga-projects></ga-projects>
+<ga-contact></ga-contact>
