--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
-<p>
-  header works!
-</p>
+<header class="header row">
+  <div class="col-xs-12">
+    <img alt="Gustavo Arenas" src="assets/logo.png"/>
+  </div>
+</header>
