Setting up header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,21 @@
 <header class="header row">
   <div class="col-xs-12">
-    <img alt="Gustavo Arenas" src="assets/logo.png"/>
+
+    <!-- TODO: insert an image -->
+    <!-- <img alt="Gustavo Arenas" src="assets/logo.png"/> -->
+    <div class="row">
+      <div class="header-image">
+        <img alt="Gustavo Arenas" src="https://placehold.it/256x256"/>
+      </div>
+
+      <div class="header-content col-xs-12 col-sm">
+        <div class="row center-xs middle-xs">
+          <div class="col-xs-12">
+            asd
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </header>
