Add mixins to use @media easily

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
 <header class="header row">
   <div class="col-xs-12">
-
     <!-- TODO: insert an image -->
     <!-- <img alt="Gustavo Arenas" src="assets/logo.png"/> -->
     <div class="row">
@@ -19,3 +18,20 @@
 
   </div>
 </header>
+
+<section class="subheader row">
+  <div class="subheader-title col-xs-12 col-sm-6 col-md-4">
+    <div class="row middle-xs">
+      <div class="col-xs-12">
+        <h2>#1 puesto</h2>
+      </div>
+    </div>
+  </div>
+  <div class="subheader-content col-xs-12 col-sm-6 col-md-8">
+    <div class="row middle-xs">
+      <div class="col-xs-12">
+        Según el informe sobre la actividad de los legisladores realizado por la UNCuyo.
+      </div>
+    </div>
+  </div>
+</section>
