--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,22 +1,21 @@
 @import "../../styles/colors";
+@import "../../styles/responsive";
 
 .header {
   .header-image {
-    flex: 0;
+    flex: auto;
+    width: 100%;
 
     img {
-      width: auto;
+      width: 100%;
       height: auto;
     }
-  }
 
-  @media only screen and (max-width: 48em) {
-    .header-image {
-      flex: auto;
-      width: 100%;
+    @include sm {
+      flex: 0;
 
       img {
-        width: 100%;
+        width: auto;
         height: auto;
       }
     }
@@ -25,5 +24,34 @@
   .header-content {
     background-color: $light-gray;
     display: inline-block;
+  }
+}
+
+.subheader {
+  .subheader-title {
+    background-color: $light-blue;
+    color: $white;
+    padding: 2rem;
+
+    h2 {
+      color: $white;
+      font-size: 2.5rem;
+      font-weight: bold;
+      text-align: center;
+      text-transform: uppercase;
+    }
+  }
+
+  .subheader-content {
+    background-color: $pink;
+    color: $white;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 2rem;
+    text-align: left;
+
+    > div {
+      height: 100%;
+    }
   }
 }
