--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -1,3 +1,22 @@
-$sm: only screen and (min-width: 48em);
-$md: only screen and (min-width: 64em);
-$lg: only screen and (min-width: 75em);
+$sm: 768px;
+$md: 1024px;
+$lg: 1200px;
+
+// tablets and laptops
+@mixin sm {
+  @media (min-width: #{$sm}) {
+    @content;
+  }
+}
+
+@mixin md {
+  @media (min-width: #{$md}) {
+    @content;
+  }
+}
+
+@mixin lg {
+  @media (min-width: #{$lg}) {
+    @content;
+  }
+}
