Section statistics created

--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,3 +1,63 @@
-<p>
-  statistics works!
-</p>
+<h2>PROYECTÓMETRO</h2>
+<div class="statistics row">
+  <div class="col-xs-12 col-md-6">
+    <div class="text">
+      <p>
+        Proyectómetro es el nombre del informe anual sobre la productividad de los legisladores realizado por la UNCUYO.
+      </p>
+      <p class="p-italic">
+        El 84.2% de las leyes que fueron aprobadas pasaron por comisiones. Y el 68% de ellas pasaron por más de una comisión.
+      </p>
+      <p class="p-italic">
+        De las 19 leyes aprobadas, 5 tuvieron coautor, lo cual es un 26.3% de las leyes. Lo cual marca la apertura al diálogo y a sumar
+        a otros bloques al debate, un valor fundamental en la producción legislativa.
+      </p>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-6">
+    <div class="div-gray col-xs-12">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3">
+          <div class="div-pink">
+            <p>
+              2016
+            </p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-9">
+          <p class="text-blue">
+            1# PUESTO
+          </p>
+          <p class="text-gray">
+            ARENAS, GUSTAVO
+          </p>
+          <p class="text-pink">
+            24 PROYECTOS PRESENTADOS
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12">
+      <div class="row">
+        <div class="col-xs-12 col-sm-3">
+          <div class="div-blue">
+            <p>
+              2015
+            </p>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-9">
+          <p class="text-blue">
+            2# PUESTO
+          </p>
+          <p class="text-gray">
+            ARENAS, GUSTAVO
+          </p>
+          <p class="text-pink">
+            12 PROYECTOS PRESENTADOS
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
