Structure of section Management defined

--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,3 +1,79 @@
-<p>
-  management works!
-</p>
+<h2>GESTIÓN LEGISLATIVA</h2>
+<div class="management row">
+  <div class="col-xs-12 col-md-6">
+    <div class="circles row">
+      <div class="col-xs-6 cold-md-3">
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          2
+        </div>
+      </div>
+      <div class="col-xs-6 cold-md-3">
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          2
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-6">
+    <div class="circles row">
+      <div class="col-xs-6 cold-md-3">
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          2
+        </div>
+      </div>
+      <div class="col-xs-6 cold-md-3">
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          1
+        </div>
+        <div>
+          2
+        </div>
+        <div>
+          2
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
