Set basic structure and style for header, trajectory and balance

--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -1,3 +1,81 @@
-<p>
-  balance works!
-</p>
+<section class="balance row">
+
+  <div class="col-xs-12">
+    <h2>Balance</h2>
+  </div>
+
+  <div class="col-xs-12">
+    <article class="balance-content row">
+      <div class="col-1 col-sm-6">
+        <div class="productivity-graph">
+          <div class="row">
+            <div class="col-xs-3">
+              <h3 class="productivity-year">2015</h3>
+            </div>
+            <div class="col-xs-3">
+              <h3 class="productivity-year">2016</h3>
+            </div>
+            <div class="col-xs-6">
+              <h3 class="productivity-title">Aumento de productividad</h3>
+            </div>
+          </div>
+
+          <div class="row bottom-xs">
+            <div class="col-xs-3">
+              <div class="productivity-box-1">
+                31
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="productivity-box-2">
+                55
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="productivity-box-3">
+                + 77,41 %
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="productivity-text row">
+          <div class="col-xs-12">
+            <p class="text-italic">
+              En 2016 son 57 los proyectos de ley presentados, lo que representa
+              un aumento de 77,41% en relación al año anterior.
+            </p>
+            <p>
+              De los 57 proyectos presentados 19 recibieron sanción. Es 34,54%
+              en un promedio de 2,71 leyes aprobadas por año de gestión. Si
+              analizamos esto con el hecho de que el promedio de cada diputado
+              es de 0,66 leyes por año y el de senadores es de 0.87 por año. El
+              promedio de las dos cámaras es de 0,76 leyes por legislador.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-2 col-sm-6">
+        <div class="productivity-box">
+          <h4>
+            La labor de Gustavo Arenas es 357% mayor al promedio
+          </h4>
+        </div>
+
+        <p>
+          En la Producción Legislativa podemos decir que el 94,5% de los
+          proyectos fueron debatidos en comisiones.
+        </p>
+        <p>
+          El 84,2% de las leyes que fueron aprobadas pasaron por comisiones. Y
+          el 68% de ellas pasaron por más de una comisión. De las 19 leyes
+          aprobadas, 5 tuvieron coautor, lo cual es un 26,3% de las leyes. Lo
+          cual marca la apertura al diálogo y a sumar a otros bloques al debate,
+          un valor fundamental en la producción legislativa.
+        </p>
+      </div>
+    </article>
+  </div>
+
+</section>
