--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,15 @@
 <header class="header row">
   <div class="col-xs-12">
     <!-- TODO: insert an image -->
-    <!-- <img alt="Gustavo Arenas" src="assets/logo.png"/> -->
     <div class="row">
-      <div class="header-image">
-        <img alt="Gustavo Arenas" src="https://placehold.it/256x256"/>
+      <div class="header-image col-xs-12 col-sm-4">
+        <img alt="Gustavo Arenas" src="assets/logo.jpg"/>
       </div>
 
-      <div class="header-content col-xs-12 col-sm">
+      <div class="header-content col-xs-12 col-sm-8">
         <div class="row center-xs middle-xs">
           <div class="col-xs-12">
-            asd
+            <!-- TODO: title -->
           </div>
         </div>
       </div>
