--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,21 +3,9 @@
 
 .header {
   .header-image {
-    flex: auto;
-    width: 100%;
-
     img {
       width: 100%;
-      height: auto;
-    }
-
-    @include sm {
-      flex: 0;
-
-      img {
-        width: auto;
-        height: auto;
-      }
+      height: 100%;
     }
   }
 
@@ -31,11 +19,11 @@
   .subheader-title {
     background-color: $light-blue;
     color: $white;
-    padding: 2rem;
+    padding: 1rem 0.5rem;
 
     h2 {
-      color: $white;
-      font-size: 2.5rem;
+      color: $light-gray;
+      font-size: 1.5rem;
       font-weight: bold;
       text-align: center;
       text-transform: uppercase;
@@ -47,7 +35,7 @@
     color: $white;
     font-size: 1rem;
     font-weight: bold;
-    padding: 2rem;
+    padding: 1rem 2rem;
     text-align: left;
 
     > div {
