--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -2,45 +2,38 @@
 <div class="management row">
   <div class="col-xs-12 col-md-6">
     <div class="circles row">
-      <div class="col-xs-6 cold-md-3">
-        <div>
-          1
+      <div class="col-xs-6 col-md-3">
+        <div class="circle-pink">
+          <p>302</p>
+          <p>PROYECTOS</p>
         </div>
-        <div>
-          2
+        <div class="circle-purple">
+          <p>168</p>
+          <p>PROYECTOS</p>
+          <p>DE RESOLUCIÓN</p>
         </div>
-        <div>
-          1
-        </div>
-        <div>
-          2
-        </div>
-        <div>
-          2
+        <div class="circle-blue">
+          <p>57</p>
+          <p>PROYECTOS DE</p>
+          <p>LEY PRESENTADOS</p>
         </div>
       </div>
-      <div class="col-xs-6 cold-md-3">
-        <div>
-          1
+      <div class="col-xs-6 col-md-3">
+        <div class="circle-blue moved">
+          <p>19</p>
+          <p>LEYES APROBADAS</p>
         </div>
-        <div>
-          2
-        </div>
-        <div>
-          1
-        </div>
-        <div>
-          2
-        </div>
-        <div>
-          2
+        <div class="circle-pink moved">
+          <p>77</p>
+          <p>PROYECTOS</p>
+          <p>DE DECLARACIÓN</p>
         </div>
       </div>
     </div>
   </div>
   <div class="col-xs-12 col-md-6">
-    <div class="circles row">
-      <div class="col-xs-6 cold-md-3">
+    <div class="table row">
+      <div class="col-xs-6 col-md-3">
         <div>
           1
         </div>
@@ -57,23 +50,78 @@
           2
         </div>
       </div>
-      <div class="col-xs-6 cold-md-3">
-        <div>
-          1
+      <div class="col-xs-6 col-md-3">
+        <p>PROYECTOS APROBADOS</p>
+        <p>DIPUTADO   SENADOR</p>
+        //UTILIZAR 2 DIV EN VEZ DE 3
+        <div class="row">
+          <div class="col-xs-2 col-md-1">
+            <div class="empty">
+
+            </div>
+            <div>
+              3
+            </div>
+            <div>
+              5
+            </div>
+            <div>
+              1
+            </div>
+            <div>
+              1
+            </div>
+            <div class="empty">
+
+            </div>
+            <div class="empty">
+
+            </div>
+            <div>
+              10
+            </div>
+          </div>
+          <div class="col-xs-2 col-md-1">
+
+          </div>
+          <div class="col-xs-2 col-md-1">
+            <div class="empty">
+
+            </div>
+            <div class="empty">
+
+            </div>
+            <div class="empty">
+
+            </div>
+            <div class="empty">
+
+            </div>
+            <div>
+              2
+            </div>
+            <div>
+              3
+            </div>
+            <div>
+              4
+            </div>
+            <div>
+              9
+            </div>
+          </div>
         </div>
-        <div>
-          2
+        <div class="col-xs-6 col-md-3">
+          <div class="row">
+            <div class="col-xs-2 col-md-1">
+              <p>19</p>
+            </div>
+            <div class="col-xs-4 col-md-2">
+              <p>LEY</p>
+              <p>APAS</p>
+            </div>
+          </div>
         </div>
-        <div>
-          1
-        </div>
-        <div>
-          2
-        </div>
-        <div>
-          2
-        </div>
-      </div>
     </div>
   </div>
 </div>
