Add example of circles in ManagementComponent

--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,3 +1,32 @@
+<div class="management row">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6">
+      <div class="container">
+        <div class="circle">
+          <p>asd</p>
+        </div>
+        <div class="circle">
+          <p>asd</p>
+        </div>
+        <div class="circle">
+          <p>asd</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6">
+      <div class="container">
+        <div class="circle">
+          <p>asd</p>
+        </div>
+        <div class="circle">
+          <p>asd</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <h2>GESTIÓN LEGISLATIVA</h2>
 <div class="row management">
   <div class="col-md-6">
