--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,120 @@
-<p>
-  projects works!
-</p>
+<h2>PROYECTOS</h2>
+<div class="project">
+  <div class="wh bg-pk">
+    <h3>SEGURIDAD VIAL</h3>
+  </div>
+  <div class="text">
+    <p>Es la mayor causa de muerte en la provincia y el número de accidentes aumenta año tras año, hemos impulsado 30 proyectos
+      de los que derivan 5 leyes vigentes, 3 leyes con media sanción y 8 proyectos que aún no han sido tratados por la cámara</p>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <ul>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <ul>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+      </ul>
+    </div>
+</div>
+
+<div class="project row">
+  <div class="col-md-6">
+    <div class="wh bg-lb">
+      <h3>CLUBES BARRIALES</h3>
+    </div>
+    <div class="text">
+      <p>Son una herramienta fundamental para recuperar el tejido social, ofrecen un modelo de vida centrado en el deporte
+         y actividades culturales, favorecen la integración social y la recreación dentro de un ambiente familiar</p>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ul>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="wh bg-lb">
+      <h3>INDUSTRIAS CULTURALES</h3>
+    </div>
+    <div class="text">
+      <p>La falta de espacios de exposición y comercialización para los hacedores culturales
+         (literatura, musica, cine) es un antiguo problema que buscamos comenzar a resolver</p>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ul>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="project row">
+  <div class="col-md-6">
+    <div class="wh bg-pk">
+      <h3>TARIFAS</h3>
+    </div>
+    <div class="text">
+      <p>El desproporcionado aumento energético es un problema que afecta a la sociedad en su conjunto,
+         ofrecer soluciones que permitar reducir sus efectos es prioritario.</p>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ul>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="wh bg-pk">
+      <h3>REGULACIÓN DE HIPERMERCADOS</h3>
+    </div>
+    <div class="text">
+      <p>El impacto económico de este modelo de negocios no siempre es positivo, regular su coexistencia
+         con los comerciantes lcoales es un tema central en la economía de la provincia</p>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <ul>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+          <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="project">
+  <div class="wh bg-lb">
+    <h3>PROTECCIÓN DE PYMES</h3>
+  </div>
+  <div class="text">
+    <p>El 75% del empleo en la provincia es generado por pymes locales, protegerlas y favorecer su desarrollo es estratégico para el desarrollo económico de Mendoza</p>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <ul>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+        <li>Señalización de cruces ferroviarios<p>LEY 12345 VIGENTE DESDE 12-07-2013</p></li>
+      </ul>
+    </div>    
+</div>
