--- a/src/app/header/award/award.component.html
+++ b/src/app/header/award/award.component.html
@@ -1,3 +1,16 @@
-<p>
-  award works!
-</p>
+<section class="subheader row">
+  <div class="subheader-title col-xs-12 col-sm-6 col-md-4">
+    <div class="row middle-xs">
+      <div class="col-xs-12">
+        <h2>#1 puesto</h2>
+      </div>
+    </div>
+  </div>
+  <div class="subheader-content col-xs-12 col-sm-6 col-md-8">
+    <div class="row middle-xs">
+      <div class="col-xs-12">
+        Según el informe sobre la actividad de los legisladores realizado por la UNCuyo.
+      </div>
+    </div>
+  </div>
+</section>
