--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,36 +1,17 @@
-<header class="header row">
-  <div class="col-xs-12">
-    <!-- TODO: insert an image -->
-    <div class="row">
-      <div class="header-image col-xs-12 col-sm-4">
-        <img alt="Gustavo Arenas" src="assets/logo.jpg"/>
-      </div>
-
-      <div class="header-content col-xs-12 col-sm-8">
-        <div class="row center-xs middle-xs">
-          <div class="col-xs-12">
-            <!-- TODO: title -->
-          </div>
+<div class="header row">
+  <div class="header-image col-xs-4 pm-0">
+    <img class="full-width full-height" alt="Gustavo Arenas" src="assets/logo.jpg"/>
+  </div>
+  <div class="header-content column middle-xs col-xs-8">
+    <div class="title column flex-2 center-xs full-width">
+      <h1>GUSTAVO ARENAS</h1>
+    </div>
+    <div class="subtitle-container column flex-1 center-xs full-width">
+      <div class="row full-height">
+        <div class="subtitle row middle-xs col-xs-8 col-xs-offset-2 full-height center-xs">
+          <h2>SENADOR DE MENDOZA</h2>
         </div>
       </div>
     </div>
-
   </div>
-</header>
-
-<section class="subheader row">
-  <div class="subheader-title col-xs-12 col-sm-6 col-md-4">
-    <div class="row middle-xs">
-      <div class="col-xs-12">
-        <h2>#1 puesto</h2>
-      </div>
-    </div>
-  </div>
-  <div class="subheader-content col-xs-12 col-sm-6 col-md-8">
-    <div class="row middle-xs">
-      <div class="col-xs-12">
-        Según el informe sobre la actividad de los legisladores realizado por la UNCuyo.
-      </div>
-    </div>
-  </div>
-</section>
+</div>
