--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,45 +1,29 @@
 @import "../../styles/colors";
-@import "../../styles/responsive";
 
 .header {
-  .header-image {
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
   .header-content {
-    background-color: $light-gray;
-    display: inline-block;
-  }
-}
+    .title {
+      background-color: $light-gray;
 
-.subheader {
-  .subheader-title {
-    background-color: $light-blue;
-    color: $white;
-    padding: 1rem 0.5rem;
-
-    h2 {
-      color: $light-gray;
-      font-size: 1.5rem;
-      font-weight: bold;
-      text-align: center;
-      text-transform: uppercase;
+      h1 {
+        color: $pink;
+        font-size: 4rem;
+      }
     }
-  }
 
-  .subheader-content {
-    background-color: $pink;
-    color: $white;
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 1rem 2rem;
-    text-align: left;
+    .subtitle-container {
+      background-color: $pink;
 
-    > div {
-      height: 100%;
+      .subtitle {
+        background-color: $blue;
+
+        h2 {
+          color: $white;
+          font-size: 2rem;
+          font-weight: bold;
+          text-align: center;
+        }
+      }
     }
   }
 }
