Add pm-0 in style.scss to set padding and margin in 0

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <h1>GUSTAVO ARENAS</h1>
     </div>
     <div class="subtitle-container column flex-1 center-xs full-width">
-      <div class="row full-height">
+      <div class="row full-height pm-0">
         <div class="subtitle row middle-xs col-xs-8 col-xs-offset-2 full-height center-xs">
           <h2>SENADOR DE MENDOZA</h2>
         </div>
