--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ html, body {
 }
 
 // remove margin and padding from flexboxgrid
-// .container-fluid, .row {
+// .row {
 //   margin: 0;
 //   padding: 0;
 // }
