Define section style and colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <ga-balance></ga-balance>
 <ga-statistics></ga-statistics>
 <ga-management></ga-management>
-<ga-projects></ga-projects>
-<ga-contact></ga-contact>
+<!-- <ga-projects></ga-projects> -->
+<!-- <ga-contact></ga-contact> -->
