--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -1,12 +1,12 @@
-<section class="balance row">
+<section class="section balance row">
 
   <div class="col-xs-12">
-    <h2>Balance</h2>
+    <h2 class="title">Balance</h2>
   </div>
 
   <div class="col-xs-12">
-    <article class="balance-content row">
-      <div class="col-1 col-sm-6">
+    <article class="content balance-content row">
+      <div class="col-1 col-xs-12 col-sm-6">
         <div class="productivity-graph">
           <div class="row">
             <div class="col-xs-3">
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="col-2 col-sm-6">
+      <div class="col-2 col-xs-12 col-sm-6">
         <div class="productivity-box">
           <h4>
             La labor de Gustavo Arenas es 357% mayor al promedio
