--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,14 @@
 <div class="header row">
-  <div class="header-image col-xs-4 pm-0">
+  <div class="header-image col-xs-12 col-sm-4">
     <img class="full-width full-height" alt="Gustavo Arenas" src="assets/logo.jpg"/>
   </div>
-  <div class="header-content column middle-xs col-xs-8">
+  <div class="header-content column middle-xs col-xs-12 col-sm-8">
     <div class="title column flex-2 center-xs full-width">
       <h1>GUSTAVO ARENAS</h1>
     </div>
     <div class="subtitle-container column flex-1 center-xs full-width">
-      <div class="row full-height pm-0">
+      <div class="row full-height">
+        <div class="col-xs-offset-2"></div>
         <div class="subtitle row middle-xs col-xs-8 col-xs-offset-2 full-height center-xs">
           <h2>SENADOR DE MENDOZA</h2>
         </div>
