--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,63 +1,59 @@
-<h2>PROYECTÓMETRO</h2>
-<div class="statistics row">
-  <div class="col-xs-12 col-md-6">
-    <div class="text">
+<div class="section statistics row">
+
+  <div class="col-xs-12">
+    <h2 class="title">Proyectómetro</h2>
+  </div>
+
+  <div class="col-xs-12 col-sm-6">
+    <div class="content">
       <p>
-        Proyectómetro es el nombre del informe anual sobre la productividad de los legisladores realizado por la UNCUYO.
+        Proyectómetro es el nombre del informe anual sobre la productividad de
+        los legisladores realizado por la UNCUYO.
       </p>
-      <p class="p-italic">
-        El 84.2% de las leyes que fueron aprobadas pasaron por comisiones. Y el 68% de ellas pasaron por más de una comisión.
+      <p>
+        El 84.2% de las leyes que fueron aprobadas pasaron por comisiones. Y el
+        68% de ellas pasaron por más de una comisión.
       </p>
-      <p class="p-italic">
-        De las 19 leyes aprobadas, 5 tuvieron coautor, lo cual es un 26.3% de las leyes. Lo cual marca la apertura al diálogo y a sumar
+      <p>
+        De las 19 leyes aprobadas, 5 tuvieron coautor, lo cual es un 26.3% de
+        las leyes. Lo cual marca la apertura al diálogo y a sumar
         a otros bloques al debate, un valor fundamental en la producción legislativa.
       </p>
     </div>
   </div>
-  <div class="col-xs-12 col-md-6">
-    <div class="div-gray col-xs-12">
-      <div class="row">
-        <div class="col-xs-12 col-sm-3">
-          <div class="div-pink">
-            <p>
-              2016
-            </p>
+
+  <div class="col-xs-12 col-sm-6">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="content">
+          <div class="box row bg-light-gray">
+            <div class="col-xs-3">
+              <h4 class="box-title bg-pink white text-bold text-center">2016</h4>
+            </div>
+            <div class="box-content col-xs-9">
+              <h5 class="position purple">1# PUESTO</h5>
+              <h6 class="name gray text-bold">ARENAS, GUSTAVO</h6>
+              <p class="projects pink">24 PROYECTOS APROBADOS</p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-sm-9">
-          <p class="text-blue">
-            1# PUESTO
-          </p>
-          <p class="text-gray">
-            ARENAS, GUSTAVO
-          </p>
-          <p class="text-pink">
-            24 PROYECTOS PRESENTADOS
-          </p>
         </div>
       </div>
-    </div>
-    <div class="col-xs-12">
-      <div class="row">
-        <div class="col-xs-12 col-sm-3">
-          <div class="div-blue">
-            <p>
-              2015
-            </p>
+
+      <div class="col-xs-12">
+        <div class="content">
+          <div class="box row">
+            <div class="col-xs-3">
+              <h4 class="box-title bg-blue white text-bold text-center">2015</h4>
+            </div>
+            <div class="box-content col-xs-9">
+              <h5 class="position purple">2# PUESTO</h5>
+              <h6 class="name gray text-bold">ARENAS, GUSTAVO</h6>
+              <p class="projects pink">12 PROYECTOS APROBADOS</p>
+            </div>
           </div>
-        </div>
-        <div class="col-xs-12 col-sm-9">
-          <p class="text-blue">
-            2# PUESTO
-          </p>
-          <p class="text-gray">
-            ARENAS, GUSTAVO
-          </p>
-          <p class="text-pink">
-            12 PROYECTOS PRESENTADOS
-          </p>
         </div>
       </div>
     </div>
   </div>
+
 </div>
