--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,29 +11,25 @@ html, body {
 }
 
 // remove margin and padding from flexboxgrid
-// .row {
-//   margin: 0;
-//   padding: 0;
-// }
-
 .row {
   margin: 0;
   padding: 0;
 }
 
-// @for $i from 1 through 12 {
-//   $prefixes: xs sm md lg;
-//   @each $p in $prefixes {
-//     .col-#{$p}-#{$i} {
-//       margin: 0;
-//       padding: 0;
-//     }
-//   }
-// }
+@for $i from 1 through 12 {
+  $prefixes: xs sm md lg;
+  @each $p in $prefixes {
+    .col-#{$p}-#{$i} {
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
 
 // custom
 @import "./styles/colors";
 @import "./styles/text";
+@import "./styles/section";
 
 // utils
 .full-width {
@@ -55,10 +51,4 @@ html, body {
   .flex-#{$i} {
     flex: $i;
   }
-}
-
-.flex-center {
-  align-items: center;
-  align-content: center;
-  justify-content: center;
 }
