--- a/src/app/header/award/award.component.html
+++ b/src/app/header/award/award.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="subheader-content col-xs-12 col-sm-6 col-md-8">
     <div class="row middle-xs">
-      <div class="col-xs-12">
+      <div class="col-xs-12 text-justify">
         Según el informe sobre la actividad de los legisladores realizado por la UNCuyo.
       </div>
     </div>
