--- a/src/app/header/award/award.component.scss
+++ b/src/app/header/award/award.component.scss
@@ -22,7 +22,7 @@
     font-size: 1rem;
     font-weight: bold;
     padding: 1rem 2rem;
-    text-align: left;
+    line-height: 1.5;
 
     > div {
       height: 100%;
