--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -1,81 +1,34 @@
 @import "../../styles/colors";
 @import "../../styles/responsive";
 
-h2{
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  color:$blue;
-  padding: 1rem 1rem;
-  @include sm{
-    font-size: 3rem;
+.section {
+  .title {
+    padding-top: 0;
   }
-}
-p{
-  padding: 1.3rem;
-}
-.text{
-  p{
-    text-align: center;
-    font-size: 1.5rem;
-  }
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.p-italic{
-  font-style: italic;
 }
 
-.div-gray{
-  background-color: $light-gray;
-}
-.div-pink{
-  background-color: $pink;
-  width: 100%;
-  height: 100%;
-  p{
-    text-align: center;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+.box {
+  padding: 1.2rem 0;
+
+  .box-title {
     font-size: 3rem;
-    font-weight: bold;
-    color: $white;
   }
-}
-.div-blue{
-  background-color: $blue;
-  width: 100%;
-  height: 100%;
-  p{
-    text-align: center;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 3rem;
-    font-weight: bold;
-    color: $white;
-  }
-}
-.text-blue{
-  color:$blue;
-  font-size: 2rem;
-  text-align: justify;
-  font-weight: bold;
-}
-.text-gray{
-  color:$darker-gray;
-  font-size: 1.5rem;
-  text-align: justify;
-  font-weight: bold;
-}
-.text-pink{
-  color:$pink;
-  font-size: 1.2rem;
-  text-align: justify;
-  font-weight: bold;
-  @include sm {
-    font-size: 1.5rem;
+  .box-content {
+    padding-left: 1rem;
+
+    .position {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
+    .name {
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .projects {
+      font-size: 1.5rem;
+      margin: 0;
+    }
   }
 }
