Fix responsive grid and style

--- a/src/app/management/grid/grid.component.html
+++ b/src/app/management/grid/grid.component.html
@@ -1,31 +1,31 @@
 <div class="row table">
-  <div class="col-md-2">  </div>
-  <div class="col-md-5 bl">
+  <div class="col-xs-2 col-md-2">  </div>
+  <div class="col-xs-5 col-md-5 bl">
     <p>PROYECTOS DE LEY</p>
   </div>
-  <div class="col-md-5 pk">
+  <div class="col-xs-5 col-md-5 pk">
     <p>PROYECTOS APROBADOS</p>
   </div>
 </div>
 
-<div class="row table">
-  <div class="col-md-2">  </div>
-  <div class="col-md-5">
+<div class="row table space">
+  <div class="col-xs-2 col-md-2">  </div>
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl">
         <p>DIPUTADO</p>
       </div>
-      <div class="col-md-6 pk">
+      <div class="col-xs-6 col-md-6 pk">
         <p>SENADOR</p>
       </div>
     </div>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl">
         <p>DIPUTADO</p>
       </div>
-      <div class="col-md-6 pk">
+      <div class="col-xs-6 col-md-6 pk">
         <p>SENADOR</p>
       </div>
     </div>
@@ -33,111 +33,111 @@
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-lp wh">
+  <div class="col-xs-2 col-md-2 bg-lp wh space">
     <p>2010</p>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-lb">
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-lb space">
+      <div class="col-xs-6 col-md-6 wh">
         <p>1</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-pk empty">
-      <div class="col-md-6">  </div>
-      <div class="col-md-6">  </div>
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-pk empty space">
+      <div class="col-xs-6 col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-pu wh">
+  <div class="col-xs-2 col-md-2 bg-pu wh space">
     <p>2011</p>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl space">
         <p>4</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl space">
         <p>3</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-lp wh">
+  <div class="col-xs-2 col-md-2 bg-lp wh space">
     <p>2012</p>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-lb">
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-lb space">
+      <div class="col-xs-6 col-md-6 wh">
         <p>6</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-pk">
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-pk space">
+      <div class="col-xs-6 col-md-6 wh">
         <p>5</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-pu wh">
+  <div class="col-xs-2 col-md-2 bg-pu wh space">
     <p>2013</p>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl space">
         <p>2</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl space">
          <p>1</p>
       </div>
-      <div class="col-md-6">  </div>
+      <div class="col-xs-6 col-md-6">  </div>
     </div>
   </div>
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-lp wh">
+  <div class="col-xs-2 col-md-2 bg-lp wh space">
     <p>2014</p>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-lb">
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-lb space">
+      <div class="col-xs-6 col-md-6 wh">
         <p>1</p>
       </div>
-      <div class="col-md-6 wh">
+      <div class="col-xs-6 col-md-6 wh">
         <p>6</p>
       </div>
     </div>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-pk">
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-pk space">
+      <div class="col-xs-6 col-md-6 wh">
         <p>1</p>
       </div>
-      <div class="col-md-6 wh">
+      <div class="col-xs-6 col-md-6 wh">
         <p>2</p>
       </div>
     </div>
@@ -145,21 +145,21 @@
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-pu wh">
+  <div class="col-xs-2 col-md-2 bg-pu wh space">
     <p>2015</p>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6">  </div>
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6">  </div>
+      <div class="col-xs-6 col-md-6 bl space">
         <p>11</p>
       </div>
     </div>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6">  </div>
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6">  </div>
+      <div class="col-xs-6 col-md-6 bl space">
         <p>3</p>
       </div>
     </div>
@@ -167,21 +167,21 @@
 </div>
 
 <div class="row table">
-  <div class="col-md-2 bg-lp wh">
+  <div class="col-xs-2 col-md-2 bg-lp wh space">
     <p>2016</p>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-lb">
-      <div class="col-md-6">  </div>
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-lb space">
+      <div class="col-xs-6col-md-6">  </div>
+      <div class="col-xs-6 col-md-6 wh">
         <p>24</p>
       </div>
     </div>
   </div>
-  <div class="col-md-5">
-    <div class="row bg-pk">
-      <div class="col-md-6">  </div>
-      <div class="col-md-6 wh">
+  <div class="col-xs-5 col-md-5">
+    <div class="row bg-pk space">
+      <div class="col-xs-6 col-md-6">  </div>
+      <div class="col-xs-6 col-md-6 wh">
         <p>4</p>
       </div>
     </div>
@@ -189,23 +189,23 @@
 </div>
 
 <div class="row table">
-  <div class="col-md-2">  </div>
-  <div class="col-md-5">
+  <div class="col-xs-2 col-md-2">  </div>
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl space">
         <p>14</p>
       </div>
-      <div class="col-md-6 bl">
+      <div class="col-xs-6 col-md-6 bl space">
         <p>41</p>
       </div>
     </div>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-5 col-md-5">
     <div class="row">
-      <div class="col-md-6 pk">
+      <div class="col-xs-6 col-md-6 pk space">
         <p>10</p>
       </div>
-      <div class="col-md-6 pk">
+      <div class="col-xs-6 col-md-6 pk space">
         <p>9</p>
       </div>
     </div>
@@ -213,23 +213,23 @@
 </div>
 
 <div class="row table wh">
-  <div class="col-md-6 bg-lb">
+  <div class="col-xs-6 col-md-6 bg-lb">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-xs-4 col-md-4 number">
         <p>55</p>
       </div>
-      <div class="col-md-8">
+      <div class="col-xs-8 col-md-8 space">
         <p>PROYECTOS</p>
         <p>DE LEY</p>
       </div>
     </div>
   </div>
-  <div class="col-md-6 bg-pk">
+  <div class="col-xs-6 col-md-6 bg-pk">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-xs-4 col-md-4 number">
         <p>19</p>
       </div>
-      <div class="col-md-8">
+      <div class="col-xs-8 col-md-8 space">
         <p>LEYES</p>
         <p>APROBADAS</p>
       </div>
