--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -1,9 +1,9 @@
 <h2>GESTIÓN LEGISLATIVA</h2>
 <div class="row management">
-  <div class="col-md-6">
+  <div class="col-xs-12 col-md-4">
     <ga-circles></ga-circles>
   </div>
-  <div class="col-md-6">
+  <div class="col-xs-12 col-md-8">
     <ga-grid></ga-grid>
   </div>
 </div>
