--- a/src/app/management/circles/circles.component.scss
+++ b/src/app/management/circles/circles.component.scss
@@ -13,21 +13,23 @@
 }
 .circle{
   border-radius: 50%;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   align-items: center;
   align-content: center;
   justify-content: center;
   margin: 10px 0px;
   .content{
     text-align: center;
+    padding-top: 75px;
     p{
      color: $white;
+     font-size: 1.5rem;
     }
     .number{
       font-weight: bold;
       font-size: 3rem;
-    }    
+    }
   }
 
 }
