--- a/src/app/management/grid/grid.component.scss
+++ b/src/app/management/grid/grid.component.scss
@@ -8,4 +8,13 @@
 .table{
   text-align: center;
   font-weight: bold;
+  font-size: 1.5rem;
+  width: 100%;
+}
+.number{
+  font-size: 5rem;
+  padding-top: 10px;
+}
+.space{
+padding: 26.35px 0px;
 }
